--- a/src/styles/toolkit.sass
+++ b/src/styles/toolkit.sass
@@ -2,7 +2,8 @@
 /* ============================================================== FONTS ============================================================== */
 /* =============================== 'Poppins' =============================== */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap')
-
+/* =============================== 'Comfortaa' =============================== */
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;600;700&display=swap')
 
 /* ============================================================== VARS ============================================================== */
 /* =============================== Colors =============================== */
