testimonials section a bit adjusted, personalized

--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -377,7 +377,7 @@ a
         &
             &
                 background-color: $clr-bg-extra
-                border-radius: 0 0 2rem 2rem
+                border-radius: 3rem
                 border: 1px solid $clr-primary
                 height: fit-content
             +hocus
@@ -386,7 +386,7 @@ a
         &__heading-wrapper
             background-color: $clr-primary
             padding: 2rem
-            border-radius: 0 0 2rem 2rem
+            border-radius: 5rem
             box-shadow: $shadow-dark-slight
         &__heading
             color: $clr-bg-basic
