bottom portfolio toggler added

--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -496,8 +496,11 @@ a
             gap: 1rem
             margin-bottom: 1rem
     &__toggler
-        margin-top: -2rem
-        margin-bottom: 4rem
+        &
+            margin-top: -2rem
+            margin-bottom: 4rem
+        &--secondary
+            margin-top: 2rem
 .testimonials-section
     .contents-wrapper
         width: 40%
@@ -669,6 +672,7 @@ a
             grid-template-columns: 1fr 1fr
             gap: 1.2rem
         &__toggler
+            &
                 margin-top: 2rem
     .testimonials-section
         .contents-wrapper
