--- a/src/styles/overalls.css
+++ b/src/styles/overalls.css
@@ -162,6 +162,11 @@ a * {
   display: flex;
   gap: 2.3rem;
   justify-content: center;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 60%;
+  margin-top: 0;
 }
 
 .scroll-down-btn {
@@ -169,6 +174,9 @@ a * {
   right: -2.3rem;
   bottom: 5rem;
   transform: rotate(90deg);
+  top: 57%;
+  height: -moz-fit-content;
+  height: fit-content;
   font-weight: 300;
   font-size: 0.9rem;
 }
@@ -184,6 +192,27 @@ a * {
   padding-top: 5rem;
   border-radius: 12rem 12rem 0 0;
   background: linear-gradient(rgb(77, 181, 255), transparent);
+  background: transparent;
+  padding: 0;
+  overflow: visible;
+  top: 10px;
+  max-width: 420px;
+  position: relative;
+  display: flex;
+  margin-top: 0;
+  left: 0;
+  width: 100%;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.photo-block__photo {
+  position: relative;
+  z-index: 0;
+  width: 110%;
+  top: -10px;
+  max-width: unset;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .progress-circle {
@@ -287,6 +316,11 @@ a * {
   text-align: center;
   height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0;
 }
 .header__socials {
   display: flex;
@@ -295,6 +329,7 @@ a * {
   gap: 0.8rem;
   position: absolute;
   left: 0;
+  top: 50%;
   bottom: 3rem;
 }
 .header__socials::after {
