--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -89,24 +89,52 @@ a
     display: flex
     gap: 2.3rem
     justify-content: center
+
+    position: absolute
+    left: 50%
+    transform: translateX(-50%)
+    top: 60%
+    margin-top: 0
 .scroll-down-btn
     position: absolute
     right: -2.3rem
     bottom: 5rem
     transform: rotate(90deg)
+    top: 57%
+    height: fit-content
     font-weight: 300
     font-size: .9rem
 .photo-block
-    width: 22rem
-    height: 30rem
-    position: relative
-    +nonStaticHcentering(11rem)
-    overflow: hidden
-    margin-top: 4rem
-    padding: 1.5rem
-    padding-top: 5rem
-    border-radius: 12rem 12rem 0 0
-    background: $gradient-primary
+    &
+        width: 22rem
+        height: 30rem
+        position: relative
+        +nonStaticHcentering(11rem)
+        overflow: hidden
+        margin-top: 4rem
+        padding: 1.5rem
+        padding-top: 5rem
+        border-radius: 12rem 12rem 0 0
+        background: $gradient-primary
+
+        background: transparent
+        padding: 0
+        overflow: visible
+        top: 10px
+        max-width: 420px
+        position: relative
+        display: flex
+        margin-top: 0
+        left: 0
+        width: 100%
+        height: fit-content
+    &__photo
+        position: relative
+        z-index: 0
+        width: 110%
+        top: -10px
+        max-width: unset
+        object-fit: contain
 .progress-circle
     &
         display: block
@@ -199,6 +227,11 @@ a
         text-align: center
         height: 100%
         position: relative
+        display: flex
+        flex-direction: column
+        justify-content: flex-start
+        align-items: center
+        gap: 0
     &__socials
         &
             &
@@ -208,6 +241,7 @@ a
                 gap: .8rem
                 position: absolute
                 left: 0
+                top: 50%
                 bottom: 3rem
             &::after
                 content: ''
