--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -39,7 +39,8 @@ body
 h1
     font-size: 2.5rem
 section
-    margin-top: 8rem
+    margin-top: 4rem
+    padding-top: 4rem
 section > h2, 
 section > h5 
     text-align: center
@@ -67,6 +68,13 @@ a
     margin: 0 auto
 .txt-light 
     color: $clr-whitish--glassy
+.flex-col
+    display: flex
+    flex-direction: column
+    justify-content: flex-start
+    align-items: flex-start
+.flex-center
+    align-items: center
 .btn
     &
         &
@@ -87,14 +95,24 @@ a
 .cta-btns
     margin-top: 2.5rem
     display: flex
-    gap: 2.3rem
+    gap: 2rem
     justify-content: center
 
-    position: absolute
-    left: 50%
-    transform: translateX(-50%)
-    top: 60%
+    // position: absolute
+    // left: 50%
+    // transform: translateX(-50%)
+    // top: 60%
     margin-top: 0
+.btn-with-icon
+    &
+        display: inline-flex
+        flex-direction: row
+        justify-content: flex-start
+        align-items: center
+        gap: 10px
+    svg
+        width: 25px
+        color: #33334e
 .scroll-down-btn
     position: absolute
     right: -2.3rem
@@ -106,34 +124,39 @@ a
     font-size: .9rem
 .photo-block
     &
-        width: 22rem
-        height: 30rem
-        position: relative
-        +nonStaticHcentering(11rem)
-        overflow: hidden
-        margin-top: 4rem
-        padding: 1.5rem
-        padding-top: 5rem
-        border-radius: 12rem 12rem 0 0
-        background: $gradient-primary
+        width: 50%
+        max-height: 910px
+        // width: 22rem
+        // height: 30rem
+        // position: relative
+        // // +nonStaticHcentering(11rem)
+        // overflow: hidden
+        // margin-top: 4rem
+        // padding: 1.5rem
+        // padding-top: 5rem
+        // border-radius: 12rem 12rem 0 0
+        // background: $gradient-primary
+        // flex-grow: 1
 
-        background: transparent
-        padding: 0
-        overflow: visible
-        top: 10px
-        max-width: 420px
-        position: relative
-        display: flex
-        margin-top: 0
-        left: 0
-        width: 100%
-        height: fit-content
+        // background: transparent
+        // padding: 0
+        // overflow: visible
+        // top: 10px
+        // max-width: 420px
+        // position: relative
+        // display: flex
+        // margin-top: 0
+        // left: 0
+        // width: 100%
+        // height: fit-content
     &__photo
         position: relative
         z-index: 0
-        width: 110%
-        top: -10px
-        max-width: unset
+        width: 100%
+        top: -50px
+        right: -50px
+        min-width: 500px
+        max-width: 800px
         object-fit: contain
 .progress-circle
     &
@@ -158,7 +181,7 @@ a
             transition: $transition-basic
 .logo-af
     color: $clr-whitish
-    margin-bottom: 3rem
+    // margin-bottom: 3rem
     width: 10rem
     height: 10rem
 .logo-af-link
@@ -228,21 +251,54 @@ a
         height: 100%
         position: relative
         display: flex
-        flex-direction: column
-        justify-content: flex-start
+        flex-direction: row
+        justify-content: space-between
         align-items: center
         gap: 0
+        background-color: $clr-bg-extra
+        border-radius: 4rem
+
+        background-color: #007bb8
+        background-image: radial-gradient(at top left, #2620DF, transparent), radial-gradient(at top right, #BC5B6A, transparent), radial-gradient(at bottom left, #1F0A4C, transparent)
+    &__name-block
+        gap: 0 !important
+    &__tagline
+        gap: 0 !important
+    &__pitch
+        &
+            flex-grow: 1
+            padding: 3rem
+            text-align: start
+            gap: 2rem
+        .flex-col
+            gap: 2rem
+        h1
+            font-size: 3rem
+            line-height: 56px
+        h5
+            font-size: 1.5rem
+        p
+            font-size: 1.4rem
+            color: $clr-whitish
     &__socials
         &
             &
                 display: flex
                 flex-direction: column
                 align-items: center
-                gap: .8rem
+                gap: 0.8rem
                 position: absolute
-                left: 0
+                right: 4%
                 top: 50%
                 bottom: 3rem
+                height: fit-content
+                transform: translateY(-50%)
+            &::before
+                
+                content: ''
+                width: 1px
+                height: 2rem
+                background-color: $clr-primary
             &::after
                 content: ''
                 width: 1px
