--- a/src/styles/overalls.css
+++ b/src/styles/overalls.css
@@ -42,6 +42,7 @@ html::-webkit-scrollbar {
 }
 
 body {
+  min-width: 330px;
   background-color: #1f1f38;
   background-size: 14px 14px;
   background-image: repeating-linear-gradient(45deg, rgba(44, 44, 107, 0.32) 0, rgba(44, 44, 107, 0.32) 1.4px, #1f1f38 0, #1f1f38 50%);
@@ -331,7 +332,7 @@ a * {
   gap: 0 !important;
 }
 .header__tagline {
-  gap: 0 !important;
+  gap: 6px !important;
 }
 .header__pitch {
   flex-grow: 1;
@@ -888,6 +889,25 @@ a * {
 }
 
 /* ============================================================== RESPONSIVENESS ============================================================== */
+/* =============================== Desktop-sm =============================== */
+@media (max-width: 1450px) {
+  .header__content {
+    align-items: center;
+  }
+  .header__pitch {
+    align-items: center;
+    text-align: center;
+  }
+  .header__name-block {
+    align-items: center;
+  }
+  .header__tagline {
+    align-items: center;
+  }
+  .photo-block {
+    display: none;
+  }
+}
 /* =============================== Tablets =============================== */
 @media (max-width: 1024px) {
   /* ============== Overalls ============== */
