--- a/src/styles/overalls.css
+++ b/src/styles/overalls.css
@@ -175,6 +175,7 @@ a * {
   display: flex;
   gap: 2rem;
   justify-content: center;
+  flex-wrap: wrap;
   margin-top: 0;
 }
 
@@ -976,15 +977,38 @@ a * {
     display: none;
   }
   /* ======= Relative ======= */
+  .header h1 {
+    font-size: 2rem;
+  }
+  .header__content {
+    max-width: 100%;
+  }
+  .header__tagline p {
+    font-size: 1.1rem;
+  }
+  .header__pitch {
+    padding: 0;
+  }
+  .header__tank {
+    background-color: transparent;
+    background-image: none;
+  }
+  .header .cta-btns {
+    gap: 2rem;
+    justify-content: center;
+  }
+  .header .cta-btns .btn-with-icon {
+    width: -moz-fit-content;
+    width: fit-content;
+    justify-content: center;
+    order: 3;
+  }
   .header__socials {
     display: none;
   }
   .about-section__img-outer-wrapper {
     width: 65%;
     margin: 0 auto 3rem;
-  }
-  .about-section .text-content {
-    text-align: center;
   }
   .about-section .text-content__about-desc {
     margin: 1.5rem 0;
