--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -98,6 +98,7 @@ a
     display: flex
     gap: 2rem
     justify-content: center
+    flex-wrap: wrap
 
     // position: absolute
     // left: 50%
@@ -824,6 +825,26 @@ a
         display: none
     /* ======= Relative ======= */
     .header
+        h1
+            font-size: 2rem
+        &__content
+            max-width: 100%
+        &__tagline
+            p
+                font-size: 1.1rem
+        &__pitch
+            padding: 0
+        &__tank
+            background-color: transparent
+            background-image: none
+        .cta-btns
+            &
+                gap: 2rem
+                justify-content: center
+            .btn-with-icon
+                width: fit-content
+                justify-content: center
+                order: 3
         &__socials
             display: none
     .about-section
@@ -832,7 +853,7 @@ a
             margin: 0 auto 3rem
         .text-content
             &
-                text-align: center
+                // text-align: center
             &__about-desc
                 margin: 1.5rem 0
             &__cards
