#main --AT-- photo updated n mobile size of the photo updated

--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -849,7 +849,8 @@ a
             display: none
     .about-section
         &__img-outer-wrapper
-            width: 65%
+            // width: 65%
+            width: 100%
             margin: 0 auto 3rem
         .text-content
             &
