#main --AT-- cta btn on mobile repositioned

--- a/src/styles/overalls.css
+++ b/src/styles/overalls.css
@@ -1017,6 +1017,10 @@ a * {
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
   }
+  .about-section .text-content__contact-cta {
+    margin: 0 auto;
+    display: block;
+  }
   .xp-section__contents-wrapper {
     gap: 1rem;
   }
