--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -860,6 +860,9 @@ a
             &__cards
                 grid-template-columns: 1fr 1fr
                 gap: 1rem
+            &__contact-cta
+                margin: 0 auto
+                display: block
     .xp-section
         &__contents-wrapper
             gap: 1rem
