--- a/src/styles/overalls.css
+++ b/src/styles/overalls.css
@@ -820,6 +820,7 @@ a * {
   gap: 1.2rem;
 }
 .contacts-section .contacts-content .message-form__field {
+  cursor: text;
   width: 100%;
   padding: 1.5rem;
   border-radius: 0.5rem;
@@ -827,6 +828,9 @@ a * {
   border: 2px solid rgba(77, 181, 255, 0.4);
   resize: none;
   color: rgb(255, 255, 255);
+}
+.contacts-section .contacts-content .message-form__field:hover, .contacts-section .contacts-content .message-form__field:focus {
+  background-color: rgb(44, 44, 108);
 }
 
 .footer {
