--- a/src/styles/toolkit.sass
+++ b/src/styles/toolkit.sass
@@ -33,6 +33,7 @@ $w-sm-tank: 90%
 $bp-desktop-sm: 1450px
 $bp-tablet: 1024px
 $bp-mobile: 600px
+$min-width: 330px
 
 /* =============================== Other =============================== */
 $headings: h1, h2, h3, h4, h5, h6
