--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -568,6 +568,7 @@ a
         &
             &
                 background-color: $clr-bg-extra
+                position: relative
                 padding: 1.3rem
                 border: 1px solid transparent
                 border-radius: 2rem
@@ -587,6 +588,21 @@ a
             display: flex
             gap: 1rem
             margin-bottom: 1rem
+        &__favourite-icon
+            &
+                color: $clr-favourite
+                width: 4rem
+                height: 4rem
+                position: absolute
+                top: 2rem
+                right: 2rem
+                filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, .34))
+                opacity: .97
+                transition: $transition-basic
+            &:hover
+                opacity: 1
+                transform: rotate(215deg) scale(1.1)
+                transform-origin: center center
     &__toggler
         &
             margin-top: -2rem
