--- a/src/styles/toolkit.sass
+++ b/src/styles/toolkit.sass
@@ -13,6 +13,8 @@ $clr-whitish: rgb(255, 255, 255)
 $clr-whitish--glassy: rgba($clr-whitish, .6)
 $clr-whitish--glassier: rgba($clr-whitish, .1)
 
+$clr-favourite: #ffbe0d
+
 $clr-bg-basic: #1f1f38
 $clr-bg-extra: rgb(44, 44, 108)
 
