--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -508,6 +508,8 @@ a
                         stroke-dasharray: 470
                     &--git circle
                         stroke-dasharray: 470
+                    &--tailwind-css circle
+                        stroke-dasharray: 490
                     // frontend
                     &--js circle
                         stroke-dasharray: 470
@@ -515,6 +517,8 @@ a
                         stroke-dasharray: 470
                     &--webpack circle
                         stroke-dasharray: 470
+                    &--typescript circle
+                        stroke-dasharray: 410
                 &__icon
                     margin-top: 6px
                     color: $clr-primary
